@@ -302,13 +302,19 @@
   (txnarray nil :type vector :read-only t))
 
 ;;; macros (see macros2.lisp for `with-open-file')
-(defmacro with-db ((var dbe file &rest options &key xa &allow-other-keys)
-                   &body forms)
+(defmacro with-dbe ((var &key create options) &body forms)
   (multiple-value-bind (body-rest declarations) (SYSTEM::PARSE-BODY forms)
-    (remf options :xa)
-    `(LET ((,var (BDB:DB-CREATE ,dbe :xa ,xa)))
+    `(LET ((,var (BDB:DBE-CREATE ,@create)))
        (DECLARE (READ-ONLY ,var) ,@declarations)
-       (BDB:DB-OPEN ,var ,file ,@options)
+       ,@(when options `((BDB:DBE-SET-OPTIONS ,var ,@options)))
+       (UNWIND-PROTECT (PROGN ,@body-rest)
+         (WHEN ,var (BDB:DBE-CLOSE ,var))))))
+(defmacro with-db ((var dbe file &key create options open) &body forms)
+  (multiple-value-bind (body-rest declarations) (SYSTEM::PARSE-BODY forms)
+    `(LET ((,var (BDB:DB-CREATE ,dbe ,@create)))
+       (DECLARE (READ-ONLY ,var) ,@declarations)
+       ,@(when options `((BDB:DB-SET-OPTIONS ,var ,@options)))
+       (BDB:DB-OPEN ,var ,file ,@open)
        (UNWIND-PROTECT (PROGN ,@body-rest)
          (WHEN ,var (BDB:DB-CLOSE ,var))))))
 (defmacro with-dbc ((var &rest options) &body forms)
