@@ -128,3 +128,11 @@
 <!ENTITY TXN_id "<ulink url='&bdb;txn_id.html'><function>DB_TXN-&gt;id</function></ulink>">
 <!ENTITY TXN_prepare "<ulink url='&bdb;txn_prepare.html'><function>DB_TXN-&gt;prepare</function></ulink>">
 <!ENTITY TXN_set_timeout "<ulink url='&bdb;txn_set_timeout.html'><function>DB_TXN-&gt;set_timeout</function></ulink>">
+
+<!-- *** lisp functions *** -->
+<!ENTITY db-create "<link linkend='db-create'><function>BDB:DB-CREATE</function></link>">
+<!ENTITY db-open "<link linkend='db-open'><function>BDB:DB-OPEN</function></link>">
+<!ENTITY db-set-options "<link linkend='db-set-options'><function>BDB:DB-SET-OPTIONS</function></link>">
+<!ENTITY dbe-create "<link linkend='dbe-create'><function>BDB:DBE-CREATE</function></link>">
+<!ENTITY dbe-set-options "<link linkend='dbe-set-options'><function>BDB:DBE-SET-OPTIONS</function></link>">
+<!ENTITY make-dbc "<link linkend='make-dbc'><function>BDB:MAKE-DBC</function></link>">
